<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Date_Time">

    <LinearLayout
        android:layout_width="391dp"
        android:layout_height="783dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="402dp"
            android:layout_height="76dp"
            android:layout_marginTop="50sp"
            android:text="@string/choose_datetime"
            android:textSize="@dimen/text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:onClick="showDatePickerDialog"
                android:text="@string/date_button" />

            <Button
                android:id="@+id/button_time"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="50sp"
                android:layout_marginEnd="197dp"
                android:onClick="showTimePickerDialog"
                android:text="@string/time_button" />
        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>